syntax = "proto3";

package service;

service Blober {
    rpc Put(PutReq) returns (PutRes);
    rpc Get(GetReq) returns (GetRes);
    rpc Write(stream WriteReq) returns (WriteRes);
    rpc Read(ReadReq) returns (stream ReadRes);
}

message PutReq {
    string name = 1;
    bytes blob = 2;
}
message PutRes {}

message GetReq {
    string name = 1;
}
message GetRes {
    bytes blob = 1;
}

message WriteReq {
    oneof phase {
        string name = 1;
        bytes blob = 2;
    }
}
message WriteRes {}

message ReadReq {
    string name = 1;
    uint32 buf_size = 2;
}
message ReadRes {
    bytes blob = 1;
}
